avances en el portafolios

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -146,8 +146,6 @@
                 <div class="grid-item-proyect">
                     <h3>E-commerce</h3>
                     <div class="div-link-proyect">
-                        <a class="link-proyect"
-                            href="https://github.com/YolausGG/ProyectosReact-TrocheGodoy">Repositorio</a>
                         <a class="btnAbrirInfo link-proyect" id="btnECommerce">Más Info.</a>
                     </div>
                 </div>
@@ -165,35 +163,50 @@
                 </div>
             </article>
         </section>
-        <dialog id="dialogGDB">
-
-            <div class="containerInfo">
-                <div class="containerInfoText">
-                    <h3 class="titleProyect">Gestión de Bovinos</h3>
-                    <p>Este es el Proyecto Final con el que conseguí junto a mi compañero Nicolas Troche el título de
-                        Analista Programador.
-                        <br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam amet odit, numquam vel nobis
-                        maxime tempora cupiditate autem alias cum atque quia expedita repellat aspernatur excepturi id
-                        voluptas enim obcaecati.</p>
-                    <a class="btnRepositorio"
-                        href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
+        <section>
+            <dialog id="dialogGDB">
+                <div class="containerInfo">
+                    <div class="containerInfoText">
+                        <h3 class="titleProyect">Gestión de Bovinos</h3>
+                        <p>Este es el Proyecto Final con el que conseguí junto a mi compañero Nicolas Troche el título
+                            de
+                            Analista Programador.
+                            <br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam amet odit, numquam vel nobis
+                            maxime tempora cupiditate autem alias cum atque quia expedita repellat aspernatur excepturi
+                            id
+                            voluptas enim obcaecati.
+                        </p>
+                        <a class="btnRepositorio"
+                            href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
+                    </div>
+                    <img class="infoProyectImage" src="img/JSLogo.svg" alt="">
                 </div>
+                <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
+            </dialog>
+            <dialog id="dialogEcommerce">
 
-                <img class="infoProyectImage" src="img/JSLogo.svg" alt="">
-
-            </div>
-
-
-            <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
-        </dialog>
-        <dialog id="dialogEcommerce">
-            <h3>E-Commerce</h3>
-            <p>Este es el Proyecto Final con el que conseguí junto a mi compañero Nicolas Troche el título de
-                Analista Programador</p>
-            <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
-
-        </dialog>
+                <div class="containerInfo">
+                    <div class="containerInfoText">
+                        <h3 class="titleProyect">E-Commerce</h3>
+                        <p>Este es el prototipo de un E-Commerce sobre una tienda de Ropa y Accesorios para vestir, que
+                            estamos desarrollando en los tiempos libres con Nicolás Troche.
+                            <br>
+                            Desarrollado con las herramientas principales React, Node.js y MySQL
+                            <br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam amet odit, numquam vel nobis
+                            maxime tempora cupiditate autem alias cum atque quia expedita repellat aspernatur excepturi
+                            id
+                            voluptas enim obcaecati.
+                        </p>
+                        <a class="btnRepositorio"
+                            href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
+                    </div>
+                    <img class="infoProyectImage" src="img/JSLogo.svg" alt="">
+                </div>
+                <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
+            </dialog>
+        </section>
     </main>
 
 
