primera parte carrusel

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -17,6 +17,7 @@
 
     <script defer src="particles.js"></script>
     <script defer src="javascript/index.js"></script>
+    <script defer src="javascript/imagenesProyectos.js"></script>
 
     <title>Portafolio de Yolaus Godoy</title>
 </head>
@@ -230,12 +231,12 @@
                             href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
-                        <div id="containerImgCarrusel">
-                            <img class="imgCarrusel" src="/img/imgInfoEcommerceLogos.png" alt="imgCarrusel">
+                        <div id="idImgCarrusel">
+                            <img class="imgCarrusel" src="/img/imgInfoEcommerceLogos.png" alt="Imagen del Carrusel" loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <i id="atras">Atras</i>
-                            <i id="adelante">Adelante</i>
+                            <img id="atras" src="/img/atras.png" alt="atras">
+                            <img id="adelante" src="/img/atras.png" alt="adelante">
                         </div>
                     </div>
                 </div>
