portadas de proyectos y mejora de imagenes

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -32,15 +32,15 @@
 
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#">Acerca de mí</a></li>
-                <li class="nav-item"><a href="/#habilidades">Habilidades</a></li>
-                <li class="nav-item"><a href="#">Proyectos</a></li>
+                <li class="nav-item"><a href="#habilidades">Habilidades</a></li>
+                <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
                 <li class="nav-item"><a href="#">Contacto</a></li>
             </ul>
 
             <ul class="dropdown_nav-menu">
                 <li class="nav-item"><a href="#">Acerca de mí</a></li>
-                <li class="nav-item"><a href="/#habilidades">Habilidades</a></li>
-                <li class="nav-item"><a href="#">Proyectos</a></li>
+                <li class="nav-item"><a href="#habilidades">Habilidades</a></li>
+                <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
                 <li class="nav-item"><a href="#">Contacto</a></li>
             </ul>
             <div class="toggle-btn">
@@ -141,7 +141,7 @@
 
         </section>
 
-        <section class="main-container">
+        <section id="proyectos" class="main-container">
             <h2 class="subtitle">Proyectos</h2>
             <article class="grid">
                 <div id="cardProyectGDB" class="grid-item-proyect">
@@ -197,7 +197,7 @@
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselGDB">
-                            <img class="imgCarrusel" src="/img/imgInfoEcommerceLogos.png" alt="Imagen del Carrusel"
+                            <img class="imgCarrusel" src="/img/HerramientasGDB.webp" alt="Imagen del Carrusel"
                                 loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
@@ -225,7 +225,7 @@
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselECommerce">
-                            <img class="imgCarrusel" src="/img/imgInfoEcommerceLogos.png" alt="Imagen del Carrusel"
+                            <img class="imgCarrusel" src="/img/HerramientasEcommerce.webp" alt="Imagen del Carrusel"
                                 loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
