--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -157,11 +157,11 @@
                             Info.</a>
                     </div>
                 </div>
-                <div id="cardPruebaCarrusel" class="grid-item-proyect">
-                    <h3>Prueba Carrusel</h3>
+                <div id="cardProyectProyectosDuranteLaCarrera" class="grid-item-proyect">
+                    <h3>Proyectos Durante La Carrera</h3>
                     <div class="div-link-proyect">
-                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('Prueba')"
-                            id="btnPruebaCarrusel">Más Info.</a>
+                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('ProyectosDuranteLaCarrera')"
+                            id="btnProyectosDuranteLaCarrera">Más Info.</a>
                     </div>
                 </div>
                 <div class="grid-item-proyect">
@@ -236,29 +236,30 @@
                 </div>
                 <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
             </dialog>
-            <dialog id="dialogPruebaCarrusel">
+            <dialog id="dialogProyectosDuranteLaCarrera">
                 <div class="containerInfo">
                     <div class="containerInfoText">
-                        <h3 class="titleProyect">Prueba Carrusel</h3>
-                        <p>Este es el prototipo de un E-Commerce sobre una tienda de Ropa y Accesorios para vestir, que
-                            estamos desarrollando en los tiempos libres con Nicolás Troche.
+                        <h3 class="titleProyect">Proyectos durante la Carrera</h3>
+                        <p>En este Repositorio estoy subiendo los pequeños proyectos, funciones, repartidos,
+                            fragmentos de código que hice mientras curse la carrera de Analista Programador.
                             <br>
-                            Desarrollado con las herramientas principales React, Node.js y MySQL
+                            Desarrollados con distintas herramientas y lenguajes.
                             <br>
-                            La idea con este proyecto es ir reafirmando y conociendo nuevos conceptos además de generar
-                            experiencia en lo que viene a ser el Desarrollo Web
+                            La idea con este Repositorio es ir mostrando lo que hice durante la carrera.
                         </p>
                         <a class="btnRepositorio"
-                            href="https://github.com/YolausGG/ProyectoFinal-GestionDeBovinos">Repositorio</a>
+                            href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
-                        <div id="idImgCarruselPrueba">
-                            <img class="imgCarrusel" src="/img/imgInfoEcommerceLogos.png" alt="Imagen del Carrusel"
-                                loading="lazy">
+                        <div id="idImgCarruselProyectosDuranteLaCarrera">
+                            <img class="imgCarrusel" src="/img/HerramientasProyectosDutanteLaCarrera.webp"
+                                alt="Imagen del Carrusel" loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasPrueba" src="/img/atras.png" alt="atras">
-                            <img class="derImgCarrusel" id="adelantePrueba" src="/img/atras.png" alt="adelante">
+                            <img class="izqImgCarrusel" id="atrasProyectosDuranteLaCarrera" src="/img/atras.png"
+                                alt="atras">
+                            <img class="derImgCarrusel" id="adelanteProyectosDuranteLaCarrera" src="/img/atras.png"
+                                alt="adelante">
                         </div>
                     </div>
                 </div>
