optimización de imágenes

--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio de Yolaus Godoy, Analista Programador - Full Stack">
-    <link rel="icon" type="image/png" href="/img/LogoYG.png">
+    <link rel="icon" type="image/webp" href="/img/LogoYG.webp">
 
     <link rel="stylesheet" href="/css/style.css">
 
@@ -27,7 +27,7 @@
     <header>
         <nav class="navbar">
             <a href="#" class="logo-container">
-                <img class="logo" src="img/LogoYG.png" alt="Logo de Yolaus">
+                <img class="logo" src="img/LogoYG.webp" alt="Logo de Yolaus">
             </a>
 
             <ul class="nav-menu">
@@ -79,62 +79,62 @@
 
                 <div class="grid-item">
                     <figure>
-                        <img src="img/HTMLLogo.png" alt="" class="grid-img">
+                        <img src="img/HTMLLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/CSSLogo.png" alt="" class="grid-img">
+                        <img src="img/CSSLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/JSLogo.svg" alt="" class="grid-img">
+                        <img src="img/JSLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/JavaLogo.png" alt="" class="grid-img">
+                        <img src="img/JavaLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/CSharpLogo.png" alt="" class="grid-img">
+                        <img src="img/CSharpLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/SQLServerLogo.png" alt="" class="grid-img">
+                        <img src="img/SQLServerLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/MySQLLogo.png" alt="" class="grid-img">
+                        <img src="img/MySQLLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/ReactLogo.png" alt="" class="grid-img">
+                        <img src="img/ReactLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/BootstrapLogo.svg" alt="" class="grid-img">
+                        <img src="img/BootstrapLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/VSCodeLogo.png" alt="" class="grid-img">
+                        <img src="img/VSCodeLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/NetbeansLogo.png" alt="" class="grid-img">
+                        <img src="img/NetbeansLogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
                 <div class="grid-item">
                     <figure>
-                        <img src="img/IIJIDEALogo.png" alt="" class="grid-img">
+                        <img src="img/IIJIDEALogo.webp" alt="" class="grid-img">
                     </figure>
                 </div>
             </article>
@@ -202,8 +202,8 @@
                                 loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasGDB" src="/img/atras.png" alt="atras">
-                            <img class="derImgCarrusel" id="adelanteGDB" src="/img/atras.png" alt="adelante">
+                            <img class="izqImgCarrusel" id="atrasGDB" src="/img/atras.webp" alt="atras">
+                            <img class="derImgCarrusel" id="adelanteGDB" src="/img/atras.webp" alt="adelante">
                         </div>
                     </div>
                 </div>
@@ -230,8 +230,8 @@
                                 loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasECommerce" src="/img/atras.png" alt="atras">
-                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.png" alt="adelante">
+                            <img class="izqImgCarrusel" id="atrasECommerce" src="/img/atras.webp" alt="atras">
+                            <img class="derImgCarrusel" id="adelanteECommerce" src="/img/atras.webp" alt="adelante">
                         </div>
                     </div>
                 </div>
@@ -257,9 +257,9 @@
                                 alt="Imagen del Carrusel" loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasProyectosDuranteLaCarrera" src="/img/atras.png"
+                            <img class="izqImgCarrusel" id="atrasProyectosDuranteLaCarrera" src="/img/atras.webp"
                                 alt="atras">
-                            <img class="derImgCarrusel" id="adelanteProyectosDuranteLaCarrera" src="/img/atras.png"
+                            <img class="derImgCarrusel" id="adelanteProyectosDuranteLaCarrera" src="/img/atras.webp"
                                 alt="adelante">
                         </div>
                     </div>
@@ -286,8 +286,8 @@
                                 alt="Imagen del Carrusel" loading="lazy">
                         </div>
                         <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.png" alt="atras">
-                            <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.png" alt="adelante">
+                            <img class="izqImgCarrusel" id="atrasPortafoliosWeb" src="/img/atras.webp" alt="atras">
+                            <img class="derImgCarrusel" id="adelantePortafoliosWeb" src="/img/atras.webp" alt="adelante">
                         </div>
                     </div>
                 </div>
