--- a/PotafoliosWeb/index.html
+++ b/PotafoliosWeb/index.html
@@ -182,7 +182,7 @@
                             de
                             Analista Programador.
                             <br>
-                            En él se desarrolló un sistema para administrar y gestionar la
+                            En el se desarrolló un sistema para administrar y gestionar la
                             sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
                             Establecimiento La Palma S.R.L.
                             <br>
